demo.txt
Traceback (most recent call last):
  File "/home/user/dev/innocuous/demo-llama/src/main.py", line 16, in <module>
    from stego.utils import (
  File "/home/user/dev/innocuous/demo-llama/src/stego/utils.py", line 19
    if tok.startswith("\u"): return False
                      ^^^^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 0-1: truncated \uXXXX escape
